analysis/IBDmix.log
$ cmake
Usage

  cmake [options] <path-to-source>
  cmake [options] <path-to-existing-build>
  cmake [options] -S <path-to-source> -B <path-to-build>

Specify a source directory to (re-)generate a build system for it in the
current working directory.  Specify an existing build directory to
re-generate its build system.

Run 'cmake --help' for more information.

$ cmake --build .
[  4%] Building CXX object src/CMakeFiles/vcf_file.dir/vcf_file.cc.o
In file included from /mnt/d/software/IBDmix/src/vcf_file.cc:1:
/mnt/d/software/IBDmix/src/../include/IBDmix/vcf_file.h:17:3: error: ‘uint64_t’ does not name a type
   17 |   uint64_t getPosition() const { return position; }
      |   ^~~~~~~~
/mnt/d/software/IBDmix/src/../include/IBDmix/vcf_file.h:5:1: note: ‘uint64_t’ is defined in header ‘<cstdint>’; did you forget to ‘#include <cstdint>’?
    4 | #include <sstream>
  +++ |+#include <cstdint>
    5 | #include <string>
/mnt/d/software/IBDmix/src/../include/IBDmix/vcf_file.h:32:3: error: ‘uint64_t’ does not name a type
   32 |   uint64_t position;
      |   ^~~~~~~~
/mnt/d/software/IBDmix/src/../include/IBDmix/vcf_file.h:32:3: note: ‘uint64_t’ is defined in header ‘<cstdint>’; did you forget to ‘#include <cstdint>’?
/mnt/d/software/IBDmix/src/vcf_file.cc: In member function ‘bool VCF_File::read_line(bool)’:
/mnt/d/software/IBDmix/src/vcf_file.cc:74:37: error: ‘position’ was not declared in this scope
   74 |   if (!(iss >> chromosome && iss >> position)) return false;
      |                                     ^~~~~~~~
gmake[2]: *** [src/CMakeFiles/vcf_file.dir/build.make:76: src/CMakeFiles/vcf_file.dir/vcf_file.cc.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:138: src/CMakeFiles/vcf_file.dir/all] Error 2
gmake: *** [Makefile:156: all] Error 2